# mdk-scratch

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile.in  README.md  configure  configure.ac  pyproject.toml
examples/dry-beans/: .gitignore  00_bootstrap-tf-state.sh  00_copy-data-to-bq.sh  00_create-svc-acct-and-key.sh  01_create-infra.sh  01_create-tf-state-bucket.sh  01_setup-tf-state.sh  02_create-svc-acct-and-key.sh  02_create-svc-acct-key.sh  02_run-model.sh  03_copy-data-to-bq.sh  04_run-model.sh  dry-beans-config.yaml  model.py  pyproject.toml
examples/dry-beans-v1/: .gitignore  README.md  dry-beans.ipynb  pyproject.toml
examples/dry-beans-v2/: 00_bootstrap-tf-state.sh  01_create-infra.sh  02_create-svc-acct-key.sh  03_copy-data-to-bq.sh  README.md  dry-beans-config.yaml  model.py
examples/dry-beans-v2/terraform/: model.tf  service-account.tf  tf-state-bucket.tf  variables.tf
examples/dry-beans/terraform/: infra-state.tf  main.tf  model.tf  service-account.tf  tf-state-bucket.tf  variables.tf
src/mdk/cli/: __init__.py  destroy.py  init.py  main.py  run.py
src/mdk/templates/: .bandit.yaml  .pre-commit-config.yaml  mdk_run.yml
src/mdk/templates/.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
src/mdk/templates/.github/actions/: README.md
src/mdk/templates/.github/workflows/: build_and_push_image.yml  ci.yml  code_checks.yml  event_alerting_ci.yml  event_alerting_deploy.yml  gradio_frp_deploy.yml  logger_ci.yml  monitoring_agent_ci.yml  pipeline_executor_ci.yml  publish_nexus.yml  release.yml  release_package.yml  (+4 more)
(+15 files in other folders)
