[project]
name = "mdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mdk = "mdk.cli.main:main"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "setuptools>=80.8.0",
]
